Tests/Resources/Bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/auto_3.st
language core;
extend with #type-reconstruction;

fn do(n : Nat) -> auto {
	return Nat::iszero(n)
}

fn main(n : auto) -> Nat {
	return do(n)
}